# BIT_File_System

./: .gitignore  CMakeLists.txt  README.md
include/: BITVFS.h  CMD.h  CMD_Sub.h  Data.h  FileIO.h  IVirtualFileSystem.h  Logger.h  Utils.h  cmd_macros.h  data_macros.h  std_headers.h  vfs_macros.h
main/: BIT_VFS.cpp
src/: BITVFS.cpp  CMD.cpp  CMD_Sub.cpp  FileIO.cpp  Utils.cpp
template/: FileIO_Template.cpp  Logger_Template.cpp  Utils_Template.cpp
unit_test/: CMD_Test.cpp  File_System_Dir_Cd_New_Test.cpp  File_System_Dir_Cd_Test.cpp  File_System_Dir_List_New_Test.cpp  File_System_Dir_List_Test.cpp  File_System_Dir_New_Test.cpp  File_System_Dir_Test.cpp  File_System_File_New_Test.cpp  File_System_Open_Test.cpp  Read_Test.cpp  Size_Test.cpp  Write_Test.cpp
